fix hero height so it works on mobiles correctly

--- a/output.css
+++ b/output.css
@@ -1813,10 +1813,6 @@ video {
   height: clamp(48px,5vh,100px);
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-svh {
   height: 100svh;
 }
